large update fo randomized testing, lucene, securemock etc.