@@ -1,15 +1,21 @@
+configurations {
+    mains
+    tests
+}
 
 dependencies {
     compile project(":randomizedtesting")
+    compile project(":ant")
     compile project(":guava")
-    compile "org.apache.ant:ant:${property('ant.version')}"
     compile "org.ow2.asm:asm:${project.property('asm.version')}"
-    compile "org.simpleframework:simple-xml:${project.property('simpleframework.version')}"
+    compile("org.simpleframework:simple-xml:${project.property('simpleframework.version')}") {
+        exclude module: 'stax-api'
+    }
 }
 
 afterEvaluate {
     compileJava {
-        inputs.property("moduleName", 'org.xbib.randomizedtesting.junit.ant')
+        inputs.property("moduleName", 'org.xbib.elasticsearch.randomizedtesting.junit.ant')
         doFirst {
             options.compilerArgs = [
                     '--module-path', classpath.asPath
@@ -17,8 +23,31 @@ afterEvaluate {
             classpath = files()
         }
     }
+    compileTestJava {
+        inputs.property("moduleName", 'org.xbib.elasticsearch.randomizedtesting.junit.ant.test')
+        doFirst {
+            options.compilerArgs = [
+                    '--module-path', classpath.asPath
+            ]
+            classpath = files()
+        }
+    }
+    test {
+        dependsOn 'jar', 'testJar'
+        doFirst {
+            classpath = files(configurations.testRuntime) + configurations.mains.artifacts.files + configurations.tests.artifacts.files
+            jvmArgs = [
+                    '--module-path', classpath.asPath,
+                    '--add-modules', 'ALL-MODULE-PATH'
+            ]
+            scanForTestClasses = false
+            exclude '**/donotexecute/*'
+            exclude '**/Test*$*'
+            include '**/Test*.class'
+        }
+    }
     javadoc {
-        inputs.property("moduleName", 'org.xbib.randomizedtesting.junit.ant')
+        inputs.property("moduleName", 'org.xbib.elasticsearch.randomizedtesting.junit.ant')
         doFirst {
             options.addStringOption('-module-path', classpath.asPath)
             classpath = files()
@@ -36,6 +65,14 @@ task sourcesJar(type: Jar) {
     classifier 'sources'
 }
 
+task testJar(type: Jar) {
+    group = 'build'
+    from sourceSets.test.output
+    classifier 'tests'
+}
+
 artifacts {
-    archives sourcesJar, javadocJar
+    mains jar
+    tests testJar
+    archives sourcesJar, javadocJar, testJar
 }
